-
Bug
-
Resolution: Fixed
-
P2: Important
-
Qt Creator 2.8.0-rc, Qt Creator 2.8.0
-
Fedora 17
-
9c78ba83c (master)
Steps to reproduce:
- Create new project
- Add class Foo
- Modify the header:
Foo.h
#include <list> class Bar; using namespace std; class Foo { public: Foo(); list<Bar> baz(); void baz2(list<Bar> bar); list<Bar>::iterator baz3(); void baz4(list<Bar>::iterator bar); };
- Use "right click -> refactor -> add definition in Foo.cpp" for all 4 added methods
- The generated code goes as such:
Foo.cpp
#include "foo.h" Foo::Foo(){} // Fine list<Bar> Foo::baz(){} // Fine void Foo::baz2(list<Bar> bar){} // Fine list::iterator Foo::baz3(){} // Missing template argument void Foo::baz4(list::iterator bar){} // Missing template argument
The same thing happens when using "add definition outside class"
- replaces
-
QTCREATORBUG-11117 "Add Definition in MyMap.cpp" converts std::map<int,int>::key_type to std::map::key_type in definition of function
-
- Closed
-
-
QTCREATORBUG-10368 Template arguments not preserved when using "Add definition..."
-
- Closed
-
| For Gerrit Dashboard: QTCREATORBUG-9727 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 666951,3 | CppEditor: Do not try to minimize names containing template name ids | master | qt-creator/qt-creator | Status: MERGED | +2 | +1 |