CppEditor: Do not try to minimize names containing template name ids

The template arguments are only present in the use of the type and will
get lost when replaced by the plain name of the class.
Doing this right might be possible, but would require a bigger rewrite.

Fixes: QTCREATORBUG-9727
Change-Id: I12c1fceeea10b278e50a124418c1407d208d1d66
Reviewed-by: Christian Stenger <christian.stenger@qt.io>